--- a/productservice/src/main/resources/application.yml
+++ b/productservice/src/main/resources/application.yml
@@ -1,26 +1,12 @@
 spring:
+  config:
+    import: "optional:configserver:"
   application:
     name: productservice
-  datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: test
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
+  cloud:
+    config:
+      uri: http://localhost:8001
+      profile: dev
+      label: main
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    serviceUrl:
-      defaultZone: http://localhost:8888/eureka/
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+# http://localhost:8001/productservice/dev/master
