--- a/eureka/Dockerfile
+++ b/eureka/Dockerfile
@@ -9,4 +9,4 @@ RUN mvn clean package -DskipTests
 FROM openjdk:23-jdk
 COPY --from=build /app/target/eureka-0.0.1-SNAPSHOT.jar /app/eureka.jar
 # CMD komutu = image container halinde çalıştırılırken çalıştırılır.
-CMD ["java", "-jar", "/app/eureka.jar"]
+CMD ["java", "-jar", "/app/eureka.jar","-Dspring-boot.run.arguments=--spring.config.location=classpath:/application-podman.properties"]
