--- a/customerservice/Dockerfile
+++ b/customerservice/Dockerfile
@@ -4,5 +4,5 @@ COPY . /app/
 RUN mvn clean package -DskipTests
 FROM openjdk:23-jdk
 COPY --from=build /app/target/customerservice-0.0.1-SNAPSHOT.jar /app/customerservice.jar
-CMD ["java", "-jar", "/app/customerservice.jar"]
+CMD ["java", "-jar", "/app/customerservice.jar","-Dspring-boot.run.arguments=--spring.config.location=classpath:/application-podman.properties"]
 
