--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -39,6 +39,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+            <version>4.1.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
