--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -4,5 +4,5 @@ COPY . /app/
 RUN mvn clean package -DskipTests
 FROM openjdk:23-jdk
 COPY --from=build /app/target/gateway-0.0.1-SNAPSHOT.jar /app/gateway.jar
-CMD ["java", "-jar", "/app/gateway.jar"]
+CMD ["java", "-jar", "/app/gateway.jar","-Dspring-boot.run.arguments=--spring.config.location=classpath:/application-podman.properties"]
 
