--- a/productservice/Dockerfile
+++ b/productservice/Dockerfile
@@ -4,5 +4,5 @@ COPY . /app/
 RUN mvn clean package -DskipTests
 FROM openjdk:23-jdk
 COPY --from=build /app/target/productservice-0.0.1-SNAPSHOT.jar /app/productservice.jar
-CMD ["java", "-jar", "/app/productservice.jar"]
+CMD ["java", "-jar", "/app/productservice.jar","-Dspring-boot.run.arguments=--spring.config.location=classpath:/application-podman.properties"]
 
