--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       server:
         git:
           uri: https://github.com/etiya-pair2/microservices-configuration
-          default-label: master
+          default-label: main
 
 server:
   port: 8001
