--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -16,10 +16,13 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    networks:
+      - common
 
-  postgresql:
+
+  productservice.db:
     image: docker.io/library/postgres:latest
-    container_name: postgresql
+    container_name: productservice.db
     environment:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
@@ -33,40 +36,9 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    networks:
+      - common
 
-  mongo:
-    image: mongo
-    ports:
-      - "27017:27017"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=root
-    volumes:
-      - mongo_data:/data/db
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.1
-    hostname: zookeeper
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-
-  kafka:
-    image: confluentinc/cp-kafka:7.4.1
-    hostname: kafka
-    container_name: kafka
-    depends_on:
-      - zookeeper
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_LOG_RETENTION_HOURS: 168
 
   configserver:
     image: "localhost/configserver"
@@ -99,7 +71,8 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - SPRING_ACTIVE_PROFILES=podman
+      - SPRING_PROFILES_ACTIVE=podman
+
 
   gateway:
     image: "localhost/gateway"
@@ -112,6 +85,10 @@ services:
     depends_on:
       eureka:
         condition: service_healthy
+    environment:
+      - SPRING_PROFILES_ACTIVE=podman
+
+
 
   customer:
     image: "localhost/customerservice"
@@ -124,6 +101,8 @@ services:
     depends_on:
         eureka:
           condition: service_healthy
+    environment:
+      - SPRING_PROFILES_ACTIVE=podman
 
   product:
     image: "localhost/productservice"
@@ -136,11 +115,12 @@ services:
     depends_on:
         eureka:
           condition: service_healthy
+    environment:
+      - SPRING_PROFILES_ACTIVE=podman
 
 volumes:
   mysql_data:
   postgres_data:
-  mongo_data:
 
 networks:
   common:
