--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -39,6 +39,43 @@ services:
     networks:
       - common
 
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - common
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.1
+    hostname: zookeeper
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - common
+  kafka:
+    image: confluentinc/cp-kafka:7.4.1
+    hostname: kafka
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_LOG_RETENTION_HOURS: 168
+    networks:
+      - common
 
   configserver:
     image: "localhost/configserver"
@@ -67,12 +104,12 @@ services:
         condition: service_healthy
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8888/actuator/health" ]
-      interval: 5s
+      interval: 30s
       timeout: 10s
       retries: 5
+
     environment:
       - SPRING_PROFILES_ACTIVE=podman
-
 
   gateway:
     image: "localhost/gateway"
@@ -87,8 +124,6 @@ services:
         condition: service_healthy
     environment:
       - SPRING_PROFILES_ACTIVE=podman
-
-
 
   customer:
     image: "localhost/customerservice"
@@ -121,6 +156,7 @@ services:
 volumes:
   mysql_data:
   postgres_data:
+  mongo_data:
 
 networks:
   common:
