add identity service

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>io.github.sabaurgup</groupId>
     <artifactId>core</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
 
     <name>core</name>
@@ -75,7 +75,10 @@
             <version>0.12.3</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
 
