--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -41,6 +41,25 @@ services:
     networks:
       - common
 
+  identityservice.db:
+    image: docker.io/library/postgres:latest
+    container_name: identityservice.db
+    environment:
+      POSTGRES_DB: identitydb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: test
+    volumes:
+      - postgres_data2:/var/lib/postgresql/data
+    ports:
+      - "5433:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - common
+
   #MONGO
   orderservice.db:
     container_name: orderservice.db
@@ -177,6 +196,7 @@ services:
 volumes:
   mysql_data:
   postgres_data:
+  postgres_data2:
   mongo_data:
 
 networks:
