add identity service docker files

--- a/identityservice/src/main/resources/application.yml
+++ b/identityservice/src/main/resources/application.yml
@@ -1,16 +1,10 @@
 spring:
+  config:
+    import: "optional:configserver:"
   application:
     name: identityservice
-  datasource:
-    url: "jdbc:postgresql://localhost:5433/identitydb"
-    username: postgres
-    password: test
-  jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-    showSql: true
-    hibernate:
-      ddlAuto: update
-server:
-  port: 8083
+  cloud:
+    config:
+      uri: http://localhost:8001
+      profile: dev
+      label: main
