--- a/productservice/pom.xml
+++ b/productservice/pom.xml
@@ -87,10 +87,9 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.etiya</groupId>
+            <groupId>io.github.sabaurgup</groupId>
             <artifactId>common</artifactId>
             <version>1.0</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
